--- a/emacs/.doom.d/config.org
+++ b/emacs/.doom.d/config.org
@@ -26,7 +26,7 @@ To define guix dependencies add a =scheme= source code block. It'll be then tang
 #+end_src
 * guix development
 #+begin_src scheme
-"emacs-debbugs" "gnu-standards" "mumi" "emacs-guix"
+"emacs-debbugs" "gnu-standards" "mumi-with-jaro" "emacs-guix"
 #+end_src
 #+begin_src elisp
 (after! debbugs
